package ca.mcmaster.cas.se2aa4.a2.island.islandTypes;

import ca.mcmaster.cas.se2aa4.a2.io.Structs;

public interface IslandGeneration {

    Structs.Mesh createIsland();

}
